# brickos

./: .cvsignore  .gitignore  CMakeLists.txt  CONTRIBUTORS  ChangeLog  Doxyfile  Doxyfile-c  Doxyfile-c++  LICENSE  Makefile  Makefile.common  Makefile.kernel  NEWS  NOTES  README  README.usb  README.use  TODO  VERSION  bootstrap.sh  configure  h8300-hms.cmake  h8300.rcx
boot/: .cvsignore  Makefile  config.h
demo/: Makefile  c++.cpp  helloworld.c  linetrack.c  robots.c  rover.c  sound.c  trailerbot.c
demo/c++/: .cvsignore  Makefile  activeSensor.C  batt.C  lampTest.C  lightSensor.C  motor.C  raceTrack.C  rotation.velocity.Sensor.C  rotationSensor.C  rover.C  sensor.C  sound.C  temperatureSensor.C  touch.pressed.Sensor.C  touchSensor.C
doc/: .cvsignore  AvailableDocs.txt  HOWTO.sgml  INSTALL-cygwin.sgml  Makefile  Notes_on_intterupts  Pros_and_Cons  RCXmessageAPI.txt  Sensors  index.html
doc/doxy-extras/: demos-c++.dxy  demos.dxy
doc/html/: doxygen.css  footer-no-sf.htm  footer.htm  header.htm  the-footer
include/: atomic.h  conio.h  critsec.h  dbutton.h  dirpd.h  dkey.h  dlcd.h  dmotor.h  dsensor.h  dsound.h  mem.h  persistent.h  remote.h  semaphore.h  stdlib.h  string.h  swmux.h  template.h  time.h  tm.h  unistd.h
include/c++/: Battery.H  CriticalSectionBlock.H  Lamp.H  LightSensor.H  Motor.H  MotorPair.H  RotationSensor.H  Sensor.H  Sound.H  TemperatureSensor.H  TouchSensor.H
include/lnp/: lnp-logical.h  lnp.h
include/lnp/sys/: irq.h  lnp-logical.h  lnp.h
include/rom/: lcd.h  registers.h  sound.h  system.h
include/sys/: battery.h  bitops.h  critsec.h  dmotor.h  dsensor.h  dsound.h  h8.h  lcd.h  mm.h  program.h  time.h  timeout.h  tm.h  vis.h
kernel/: atomic.c  battery.c  conio.c  critsec.c  dkey.c  dmotor.c  dsensor.c  dsound.c  kmain.c  lcd.c  lnp-logical.c  lnp.c  mm.c  program.c  remote.c  semaphore.c  setjmp.c  systime.c  template.c  timeout.c  tm.c  vis.c
lib/: Makefile
lib/c/: .cvsignore  Makefile  memcpy.c  memset.c  printf.c  random.c
lib/c++/: Makefile  mem.cpp  sensor.cpp  stub.c
lib/config/: config.h  config.h.in
lib/float/: .cvsignore  Makefile  README  addsf3.s  cmpsf2.s  divsf3.s  expandsf.s  fixsfsi.s  floatsisf.s  joinsf.s  mulsf3.s  negsf2.s  normalsf.s  startsf.s
lib/mint/: .cvsignore  Makefile  cmpsi2.c  mulhi3.c  ucmpsi2.c
util/: .cvsignore  Makefile  Makefile.common  merge-map
util/dll-src/: .cvsignore  Makefile  config.h  convert.c  dll.1  fixdeps.c  genlds.c  keepalive.c  loader.c  lx.c  lx.h  rcxtty.c  rcxtty.h  srec.c  srec.h  srecload.c  srecload.h
util/firmdl/: .cvsignore  Makefile  firmdl.c  firmdl3.1  mkimg.c  rcx_comm.c
